Update correct audio paths.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3>Beginnings</h3>
         <p>
             <audio controls>
-                <source src="chapter1.mp3" type="audio/mpeg">
+                <source src="audio/chapter1.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </p>
@@ -23,7 +23,7 @@
         <h3>Ignition</h3>
         <p>
             <audio controls>
-                <source src="chapter2.mp3" type="audio/mpeg">
+                <source src="audio/chapter2.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </p>
@@ -32,7 +32,7 @@
         <h3>Propellant</h3>
         <p>
             <audio controls>
-                <source src="chapter3.mp3" type="audio/mpeg">
+                <source src="audio/chapter3.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </p>
@@ -49,7 +49,7 @@
         <h3>Paths</h3>
         <p>
             <audio controls>
-                <source src="chapter4.mp3" type="audio/mpeg">
+                <source src="audio/chapter4.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </p>
@@ -58,7 +58,7 @@
         <h3>Hobbies</h3>
         <p>
             <audio controls>
-                <source src="chapter5.mp3" type="audio/mpeg">
+                <source src="audio/chapter5.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </p>
@@ -67,7 +67,7 @@
         <h3>Planning</h3>
         <p>
             <audio controls>
-                <source src="chapter6.mp3" type="audio/mpeg">
+                <source src="audio/chapter6.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </p>
@@ -84,7 +84,7 @@
         <h3>Conclusion</h3>
         <p>
             <audio controls>
-                <source src="conclusion.mp3" type="audio/mpeg">
+                <source src="audio/conclusion.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </p>
